--- a/front-end/my-app/src/DraftForm.css
+++ b/front-end/my-app/src/DraftForm.css
@@ -1,4 +1,3 @@
-/* Enhanced Pastel Space Theme with Interactive and Accessible Elements */
 :root {
     --retro-font: 'Press Start 2P', cursive;
     --dark-space: #1a1c2b; /* Dark Space Background */
@@ -53,6 +52,10 @@ input[type="email"], input[type="text"], textarea {
     color: var(--dark-space);
     font-size: 1rem;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+textarea.bigger-textarea {
+    height: 150px; /* Adjust the height as needed */
 }
 
 input[type="email"]:hover, input[type="text"]:hover, textarea:hover,
@@ -111,12 +114,6 @@ button:disabled {
     margin-bottom: 20px;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     animation: pulse 2s infinite ease-in-out;
-}
-
-@keyframes pulse {
-    0% { box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5); }
-    50% { box-shadow: inset 0 0 20px var(--progress-bar-color); }
-    100% { box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5); }
 }
 
 .progress {
