--- a/front-end/my-app/src/OAuth.css
+++ b/front-end/my-app/src/OAuth.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh; /* Full viewport height */
+    width: 500vh;
     background-color: #2c3e50; /* Dark background for retro feel */
 }
 
